# gl-matrix

./: CMakeLists.txt  Makefile  README.md  mat3.c  mat4.h  quat.h  vec3.c  vec3.h  vec4.c
include/: gl-matrix.h  mat2.h  mat3.h  typedefs.h  vec2.h  vec4.h
src/: mat2.c  mat4.c  quat.c  vec2.c  vec3.c
